tests/compiletests/ui/lang/asm/issue-1002.stderr
error: using `OpReturn` to return from within `asm!` is disallowed
   --> $DIR/issue-1002.rs:
    |
    |         asm!("OpReturn", options(noreturn));
    |               ^^^^^^^^
    |
    = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
   --> $DIR/issue-1002.rs:
    |
    |             "OpReturnValue {x}",
    |              ^^^^^^^^^^^^^^^^^
    |
    = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturn` to return from within `asm!` is disallowed
   --> $DIR/issue-1002.rs:
    |
    |             "OpReturn",          // close active block
    |              ^^^^^^^^
    |
    = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: using `OpReturnValue` to return from within `asm!` is disallowed
   --> $DIR/issue-1002.rs:
    |
    |             "OpReturnValue {x}", // close active block
    |              ^^^^^^^^^^^^^^^^^
    |
    = note: resuming execution, without falling through the end of the `asm!` block, is always undefined behavior

error: aborting due to 4 previous errors

